--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sean Weber | Portfolio</title>
-    <link rel="stylesheet" href="./Assets/style.css">
+    <link rel="stylesheet" href="client/src/assets/style.css">
 </head>
 <body>
     <!-- An anchor to the top of the page -->
@@ -14,7 +14,7 @@
     <header>
         <div class="headerBlock">
             <h1>Sean Weber</h1>
-                    <img src="./Assets/Images/profilephoto.jpg" id="profilePhoto">
+                    <img src="client/src/assets/Images/profilephoto.jpg" id="profilePhoto">
                 
         </div>
 
@@ -46,7 +46,7 @@
             <h3>Work</h3>
             <div class="work">
                 <div class="panel">
-                    <a href="#" target="_blank"><img src="./Assets/Images/calculator.jpg"></a>
+                    <a href="#" target="_blank"><img src="client/src/assets/Images/calculator.jpg"></a>
                     <div class="imgLabel">
                         <h4>
                              Simple Calculator
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="panel">
-                    <a href="https://seanpweber.github.io/hw3-spw-random-password-generator/" target ="_blank"><img src="./Assets/Images/password.jpg"></a>
+                    <a href="https://seanpweber.github.io/hw3-spw-random-password-generator/" target ="_blank"><img src="client/src/assets/Images/password.jpg"></a>
                     <div class="imgLabel">
                         <h4>
                             Password Generator
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="panel">
-                    <a href="#" target="_blank"><img src="./Assets/Images/planner.jpg"></a>
+                    <a href="#" target="_blank"><img src="client/src/assets/Images/planner.jpg"></a>
                     <div class="imgLabel">
                         <h4>
                             Day Planner
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="panel">
-                    <a href="#" target="_blank"></a><img src="./Assets/Images/weather.jpg"></a>
+                    <a href="#" target="_blank"></a><img src="client/src/assets/Images/weather.jpg"></a>
                     <div class="imgLabel">
                         <h4>
                             Weather Dashboard
@@ -121,7 +121,8 @@
     </footer>
 
     <!-- Javascript -->
-    <script src="./Assets/jquery-3.5.1.js" type="text/javascript"></script>
-    <script src="./Assets/script.js" type="text/javascript"></script>
+    <script src="client/config/dist/bundle.js" type="text/javascript"></script>
+    <!-- <script src="client/src/scripts/jquery-3.5.1.js" type="text/javascript"></script>
+    <script src="client/src/scripts/scroll.js" type="text/javascript"></script> -->
 </body>
 </html>
