--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
         <div class="navbar-brand">
             <a class="navbar-item">
                 <figure class="image is-64x64" style="margin-right: 10px">
-                    <img class="is-rounded" src="client/src/assets/Images/profilephoto.jpg" id="headshot">
+                    <img class="is-rounded" id="profilePhoto">
                 </figure>
                 <h1 class="title has-text-white">Sean Weber</h1>
             </a>
@@ -79,7 +79,7 @@
             <h3>Work</h3>
             <div class="work">
                 <div class="box">
-                    <a href="#" target="_blank"><img src="client/src/assets/Images/calculator.jpg"></a>
+                    <a href="#" target="_blank"><img id="calculator"></a>
                     <div class="imgLabel">
                         <h4>
                              Simple Calculator
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <a href="https://seanpweber.github.io/hw3-spw-random-password-generator/" target ="_blank"><img src="client/src/assets/Images/password.jpg"></a>
+                    <a href="https://seanpweber.github.io/hw3-spw-random-password-generator/" target ="_blank"><img id="password"></a>
                     <div class="imgLabel">
                         <h4>
                             Password Generator
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <a href="#" target="_blank"><img src="client/src/assets/Images/planner.jpg"></a>
+                    <a href="#" target="_blank"><img id="planner"></a>
                     <div class="imgLabel">
                         <h4>
                             Day Planner
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <a href="#" target="_blank"></a><img src="client/src/assets/Images/weather.jpg"></a>
+                    <a href="#" target="_blank"></a><img id="weather"></a>
                     <div class="imgLabel">
                         <h4>
                             Weather Dashboard
@@ -154,6 +154,6 @@
     </footer>
 
     <!-- Javascript -->
-    <script src="client/config/dist/bundle.js" type="text/javascript"></script>
+    <script src="client/webpack/dist/bundle.js" type="text/javascript"></script>
 </body>
 </html>
