updated background photo in webpack bundle

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -64,7 +64,7 @@
 
     <div class="content">
     <!-- Body image -->
-    <div class="pagePhoto"></div>
+    <div><img id="computer"></div>
 
     <!-- Content cards -->
     <div class="content">
