fixed a wild span I forgot to delete

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -132,7 +132,7 @@
             <ul>
                 <li>
                     <a href="mailto: sean.weber95@gmail.com" target="_blank">Email</a>
-                    <a href="https://github.com/seanpweber" target="_blank">Github <span class="icon"><i class="mdi mdi-18px mdiGithub"></i></span></a>
+                    <a href="https://github.com/seanpweber" target="_blank">Github</a>
                     <a href="https://www.linkedin.com/in/sean-weber-7965b9113/" target="_blank">LinkedIn</a>
                 </li>
             </ul>
