footer style added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -165,10 +165,12 @@
     </div>
 
     <!-- Footer and credits -->
-    <footer>
-        <h2>Made with ❤️️ by Sean Weber
-            <br><span id="credit">Images courtesy of </span><a id="credit" href="https://www.pexels.com" target="_blank">Pexels.com</a>
-        </h2>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p class="title is-7">Made with ❤️️ by Sean Weber
+                <br><span id="credit">Images courtesy of </span><a id="credit" href="https://www.pexels.com" target="_blank">Pexels.com</a>
+            </p>
+        </div>
         
     </footer>
 
