many styles updated

--- a/staging.html
+++ b/staging.html
@@ -1,15 +1,42 @@
-<div class="card">
-    <div class="card-image">
-        <a href="#" target="_blank"><img id="weather"></a>
-    <div class="card-content">
-        <div class="media">
-            <div class="media-content">
-                <p class="title is-4">Weather Dashboard</p>
-            </div>
-        </div>
-    
-        <div class="content">
-            Get your daily forecast!
-        </div>
+<div class="field">
+    <label class="label">Name</label>
+    <div class="control">
+      <input class="input" type="text" placeholder="e.g. Johnny Appleseed">
+    </div>
+</div>
+  
+<div class="field">
+    <label class="label">Email</label>
+    <div class="control has-icons-left has-icons-right">
+        <input class="input" type="email" placeholder="e.g. averycoolperson@email.com" value="hello@">
+        <span class="icon is-small is-left">
+            <i class="fas fa-envelope"></i>
+        </span>
+        <span class="icon is-small is-right">
+            <i class="fas fa-exclamation-triangle"></i>
+        </span>
+    </div>
+</div>
+  
+<div class="field">
+    <label class="label">Subject</label>
+    <div class="control">
+      <input class="input" type="text" placeholder="e.g. I would like to offer you a million dollars!">
+    </div>
+</div>
+  
+<div class="field">
+    <label class="label">Message</label>
+    <div class="control">
+        <textarea class="textarea" placeholder=""></textarea>
+    </div>
+</div>
+  
+<div class="field is-grouped">
+    <div class="control">
+        <button class="button is-link">Submit</button>
+    </div>
+    <div class="control">
+        <button class="button is-link is-light">Cancel</button>
     </div>
 </div>
