styles for each component roughly established. ready to break into components for react

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -189,7 +189,7 @@
     </div>
 
     <!-- Button to return you to top of page anchor -->
-        <a id="backToTop" class="button is-info hide" href="#top">↑ Back to top</a>
+    <a id="backToTop" class="button is-info hide" href="#top"><p style="margin-right:5px;">↑ Back to top</p></a>
 
     <!-- Footer and credits -->
     <footer class="footer">
@@ -198,7 +198,6 @@
                 <br><span id="credit">Images courtesy of </span><a id="credit" href="https://www.pexels.com" target="_blank">Pexels.com</a>
             </p>
         </div>
-        
     </footer>
 
     <!-- Javascript -->
