components folder added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <!-- Header box and title -->
     <nav id="navbar" class="navbar is-info is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item">
+            <a class="navbar-item" href="">
                 <figure class="image is-64x64" style="margin-right: 10px">
                     <img class="is-rounded" id="profilePhoto">
                 </figure>
